# agent-knowledge

./: .dbmate.toml  .env.template  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-end.sh  session-start.sh  stop.sh  user-prompt.sh
db/migrations/: 20260419000001_create_core_tables.sql  20260420000001_nullable_project_id.sql
docs/: EP-00001_20260419_v0.1-core-foundation.md  EP-00002_20260419_v0.2-review-pipeline-and-promotion.md  EP-00003_20260419_v0.3-security-maintenance-llm-review.md  EP-00008_20260501_memory-tier-layout-migration.md  EP-00009_20260501_skill-and-agent-discovery.md  EP-00010_20260504_cli-only-migration.md  EP-00011_20260530_session-summary-workflow.md  MCP_TO_CLI_MIGRATION.md  SPECS.md
docs/archived/: EP-00002_20260419_v0.2-review-pipeline-and-promotion.md  EP-00003_20260419_v0.3-security-maintenance-llm-review.md  EP-00004_20260420_v0.4-auto-session-management.md  EP-00005_20260427_session-capture-lifecycle.md  EP-00006_20260427_knowledge-to-skill-conversion.md  EP-00007_20260427_agent-profiles.md  EP-00008_20260501_memory-tier-layout-migration.md  EP-00009_20260501_skill-and-agent-discovery.md  EP-00010_20260504_cli-only-migration.md
src/agent_knowledge/: __init__.py  akw_instructions.md  cli.py  server.py
src/agent_knowledge/core/: config.py  memory.py  paths.py  sanitizer.py  search.py  storage.py
tests/: conftest.py  test_auto_session.py  test_cli.py  test_intelligences.py  test_memory.py  test_paths.py  test_recover.py  test_review.py  test_sanitizer.py  test_search.py  test_storage.py
