[project]
name = "agent-knowledge"
version = "0.1.0"
description = "MCP server for agent-agnostic persistent knowledge management"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "mcp",
    "duckdb",
    "click",
    "anthropic",
]

[project.scripts]
akw = "agent_knowledge.cli:main"
agent-knowledge-server = "agent_knowledge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_knowledge"]

[tool.uv]
dev-dependencies = [
    "dbmate-bin>=2.31",
    "pytest",
    "pyright",
]

[tool.agent-knowledge]
data_dir = "~/.agent-knowledge"
search_engine = "bm25"

[tool.agent-knowledge.llm]
provider = "anthropic"
model = "claude-sonnet-4-6"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
