[project]
name = "agent-knowledge"
version = "0.2.0"
description = "Agent-agnostic persistent knowledge management — CLI + session hooks"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "duckdb",
    "click",
]

[project.optional-dependencies]
llm = ["anthropic"]

[project.scripts]
akw = "agent_knowledge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_knowledge"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_knowledge/akw_instructions.md" = "agent_knowledge/akw_instructions.md"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pyright",
]

[tool.agent-knowledge]
data_dir = "~/.agent-knowledge"
search_engine = "bm25"

[tool.agent-knowledge.llm]
provider = "anthropic"
model = "claude-sonnet-4-6"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
